<resources>
    <string name="app_name">ShoeStore</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email">ENTER YOUR EMAIL</string>
    <string name="passWordHit">ENTER YOUR PASSWORD</string>
    <string name="Login">LOGIN</string>
    <string name="newLogin">NEW LOGIN</string>
    <string name="welcomeApp">WELCOME TO  APP</string>
    <string name="welcome">welcomewelcomewemewelcome</string>
    <string name="ok">ok</string>
    <string name="struction">The struction</string>
    <string name="structionhit">THE structionTHE structionTHE  struction</string>
    <string name="logout">Log Out</string>
    <string name="shoeName">Shoe Name</string>
    <string name="company">Company</string>
    <string name="size">Size</string>
    <string name="description">Description</string>
    <string name="textview">TextView</string>
</resources>
