<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
<data>
    <variable
        name="model"
        type="com.udacity.shoestore.ShoesViewModel" />
    <variable
        name="shoe"
        type="com.udacity.shoestore.models.Shoe" />

</data>

    <!--uesing constraintLayout  it  eazy Management Views-->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/backb"
        android:orientation="vertical"
        tools:context=".newShoeFragment">


        <EditText
            android:id="@+id/editText_shoeName"
            style="@style/textEdit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="136dp"
            android:ems="10"
            android:onTextChanged="@{(text,start,before,after)->model.setShoeName(text.toString)}"
            android:text="@={shoe.name}"
            android:hint="@string/shoeName"
            android:inputType="text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.412"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/shoeName"
            app:layout_constraintBottom_toTopOf="@+id/editText_shoeName"
            app:layout_constraintEnd_toEndOf="@+id/editText_shoeName"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/editText_shoeName" />

        <EditText
            android:id="@+id/editText_company"
            style="@style/textEdit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:ems="10"
            android:hint="@string/company"
            android:onTextChanged="@{(text,start,before,after)->model.setCompany(text.toString)}"            android:text="@={shoe.company}"
            android:inputType="text"
            app:layout_constraintEnd_toEndOf="@+id/editText_shoeName"
            app:layout_constraintStart_toStartOf="@+id/editText_shoeName"
            app:layout_constraintTop_toBottomOf="@+id/editText_shoeName" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/company"
            app:layout_constraintBottom_toTopOf="@+id/editText_company"
            app:layout_constraintEnd_toEndOf="@+id/editText_company"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/editText_company" />

        <TextView
            android:id="@+id/textView11"
            android:layout_width="62dp"
            android:layout_height="16dp"
            android:text="@string/size"
            app:layout_constraintBottom_toTopOf="@+id/et_shoessize"
            app:layout_constraintEnd_toEndOf="@+id/et_shoessize"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/et_shoessize" />

        <EditText
            android:id="@+id/et_shoessize"
            style="@style/textEdit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:ems="10"
            android:hint="@string/size"
            android:onTextChanged="@{(text,start,before,after)->model.setsize(text.toString)}"
            android:text="@={shoe.size}"
            app:layout_constraintEnd_toEndOf="@+id/editText_company"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/editText_company"
            app:layout_constraintTop_toBottomOf="@+id/editText_company" />

        <EditText
            android:id="@+id/editText_description"
            style="@style/textEdit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:ems="10"
            android:hint="@string/description"
            android:inputType="text"
            android:onTextChanged="@{(text,start,before,after)->model.setDescription(text.toString)}"
            android:text="@={shoe.description}"
            app:layout_constraintEnd_toEndOf="@+id/et_shoessize"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/et_shoessize"
            app:layout_constraintTop_toBottomOf="@+id/et_shoessize" />

        <TextView
            android:id="@+id/textView12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/description"
            app:layout_constraintBottom_toTopOf="@+id/editText_description"
            app:layout_constraintEnd_toEndOf="@+id/editText_description"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/editText_description" />

        <Button
            android:id="@+id/button_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="59dp"
            android:layout_marginEnd="4dp"
            android:layout_marginBottom="212dp"
            android:background="#2FBF0F"
            android:text="Save"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/editText_description"
            app:layout_constraintTop_toBottomOf="@+id/editText_description" />

        <Button
            android:id="@+id/button_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="96dp"
            android:background="#FD7A7A"
            android:text="@android:string/cancel"
            app:layout_constraintBottom_toBottomOf="@+id/button_save"
            app:layout_constraintEnd_toStartOf="@+id/button_save"
            app:layout_constraintTop_toTopOf="@+id/button_save"
            app:layout_constraintVertical_bias="1.0" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>